--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
+certs/out
+
 # Distribution / packaging
 .Python
 build/
@@ -20,6 +22,7 @@ parts/
 sdist/
 var/
 wheels/
+
 share/python-wheels/
 *.egg-info/
 .installed.cfg
